--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "html-react-parser": "^0.14.1",
+    "md5": "^2.3.0",
     "react": "^17.0.1",
-    "react-bootstrap": "^1.4.0",
+    "react-bootstrap": "^1.5.1",
     "react-dom": "^17.0.1",
+    "react-file-reader": "^1.1.4",
     "react-player": "^2.6.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
