--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
@@ -12,12 +15,14 @@
     "md5": "^2.3.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.1",
+    "react-bootstrap-input-spinner": "^1.0.2",
     "react-dom": "^17.0.1",
     "react-file-reader": "^1.1.4",
     "react-player": "^2.6.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
-    "sweetalert": "^2.1.2",
+    "sweetalert2": "^10.15.5",
+    "sweetalert2-react-content": "^3.3.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
