--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.2.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
+    "dotenv": "^8.2.0",
     "html-react-parser": "^1.2.4",
     "md5": "^2.3.0",
     "react": "^17.0.1",
