1. package.json add react-chartjs-2
2. added Optical.js page

3. Add an authentication token to the header when calling the api
=> Device.js, FOTA.js, Firmware.js, CreateFirmware.js, UpdateFirmware.js, Model.js, CreateModel.js, UpdateModel.js

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
 REACT_APP_API_SERVER = 'http://192.168.0.5/lcm/laravel_api/public/index.php'
+
+HTTPS = true
+
+SSL_CRT_FILE = 'certificate.crt'
+SSL_KEY_FILE = 'private.key'
