--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
     "bootstrap": "^4.5.3",
+    "chart.js": "^3.5.0",
     "dotenv": "^8.2.0",
     "md5": "^2.3.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.1",
     "react-bootstrap-input-spinner": "^1.0.2",
+    "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.1",
     "react-file-reader": "^1.1.4",
     "react-player": "^2.6.2",
